test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_string_cast.sol
contract at layout at uint40(bytes5(hex"0011223344")) { }
// ----
// TypeError 6396: (22-53): The base slot of the storage layout must evaluate to a rational number.
